--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,12 @@
 .wrapper {
+    --search-box-width: 500px;
+    --search-input-width: 420px;
+    --search-input-height: 46px;
+    --search-border-radius: 92px;
+    --search-btn-width: calc(
+        var(--search-box-width) - var(--search-input-width) - 18px
+    );
+    --search-bar-spacer: 10px;
     width: 100%;
     height: 60px;
     padding: 0px 16px;
@@ -8,4 +16,75 @@
 .inner {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search {
+    position: relative;
+    max-width: var(--search-box-width);
+    width: var(--search-box-width);
+    height: 46px;
+    padding-left: 16px;
+    background-color: #f1f1f2;
+    border-radius: var(--search-border-radius);
+    border: 1.5px solid transparent;
+
+    &:has(> *:hover),
+    &:has(.search-input:focus-within) {
+        border: 1.5px solid #c5c6c9;
+    }
+
+    &:has(> *:hover) .search-btn {
+        background-color: #e4e4e6;
+        color: #161823;
+    }
+}
+
+.search-input {
+    width: var(--search-input-width);
+    font-size: 1.6rem;
+    color: rgb(10, 11, 15);
+    background-color: transparent;
+    height: 100%;
+    caret-color: var(--primary-color);
+}
+
+.loading,
+.clear-btn {
+    position: absolute;
+    top: 50%;
+    right: calc(var(--search-btn-width) + 16px);
+    transform: translateY(-50%);
+    color: #a9a9ac;
+    font-size: 18px;
+}
+
+.search-btn {
+    width: var(--search-btn-width);
+    height: 100%;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 20px;
+    color: #b6b6ba;
+
+    &::before {
+        content: '';
+        display: block;
+        height: calc(var(--search-input-height) - 2 * var(--search-bar-spacer));
+        width: 1px;
+        background-color: #b6b6ba;
+        position: absolute;
+        top: 50%;
+        right: var(--search-btn-width);
+        transform: translateY(-50%);
+    }
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.active {
 }
